# lerobot-trial-on-mac

./: .gitignore  README.md  pyproject.toml
notebooks/: evaluate_pretrained_policy.ipynb  pi0_trial.ipynb  simulate_aloha_with_script.ipynb  train_policy.ipynb
